--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <spring.version>5.2.9.RELEASE</spring.version>
+        <log4j>1.2.17</log4j>
     </properties>
 
     <dependencies>
@@ -87,6 +88,12 @@
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>3.4.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j}</version>
         </dependency>
 
     </dependencies>
