--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,45 +16,12 @@
 
     <servlet>
         <servlet-name>MainServlet</servlet-name>
-        <servlet-class>com.noirix.controller.FrontController</servlet-class>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/FrontController</url-pattern>
-    </servlet-mapping>
-
-<!--    localhost:8080/application/FrontController-->
-
-    <servlet>
-        <servlet-name>HelloWeb</servlet-name>
-        <jsp-file>/WEB-INF/jsp/hello.jsp</jsp-file>
-    </servlet>
-
-    <servlet>
-        <servlet-name>ByeByeWeb</servlet-name>
-        <jsp-file>/WEB-INF/jsp/bye.jsp</jsp-file>
-    </servlet>
-
-    <servlet>
-        <servlet-name>Error</servlet-name>
-        <jsp-file>/WEB-INF/jsp/error.jsp</jsp-file>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>HelloWeb</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-
-    <!--    localhost:8080/application/hello-->
-
-    <servlet-mapping>
-        <servlet-name>ByeByeWeb</servlet-name>
-        <url-pattern>/bye</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>Error</servlet-name>
-        <url-pattern>/error</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <filter>
