Spring Security Basics JWT Token Realisation Added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,9 @@ amazon:
     s3: 123123213
     token: someToken
     password: password
+
+---
+
+jwtconfig:
+  secret: secret
+  expiration: 60000
