--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.15.58</version>
+        </dependency>
+
     </dependencies>
 
     <build>
